# SOUDAI_data_scraping

./: .gitignore  README.md  pyproject.toml
notebooks/: data_exploration.ipynb
references/: court_map.yaml
src/: config.py
src/preprocessing/: cli.py  law_reference_parser.py
src/preprocessing/components/: cislo.py  law_type.py  law_type_patterns.yaml  load_patterns.py  paragraf.py
src/preprocessing/utils/: cleaning.py  io.py  missing.py  outliers.py  target.py
src/scraping/: scrape_all.py  scraping_utils.py
src/scraping/infosoud/: cli.py  utils.py
src/scraping/infosoud/utils/: checkpointing.py  court_data.py  filtering.py  io.py  parsing.py  threading.py  timeline.py  urls.py
src/scraping/rozhodnuti/: cli.py  utils.py
tests/: test_scraping_infosoud.py  test_scraping_rozhodnuti.py
