[tool.poetry]
name = "soudai-data-scraping"
version = "0.1.0"
description = "Data scraping for Czech court decisions."
authors = ["Mark Bugden <mathphys@mark-bugden.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "scraping", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"



[tool.poetry.group.dev.dependencies]
pyment = "^0.3.3"
ruff = "^0.11.11"
ipykernel = "^6.29.5"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "E501", "F"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["F401"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
